Fix visibility for buttons

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -258,7 +258,7 @@ text{
 }
 
 
-
+.primary2,
 .secondary,
 .tertiary{
 	display:none;
